# WRO_ROS

./: CMakeLists.txt  package.xml
config/: mapper_params_localization.yaml  nav2_params.yaml  twist_mux_topics.yaml  wro_2025.pgm  wro_2025.yaml  wro_2025_serial.data  wro_2025_serial.posegraph
launch/: lidar_bot_launch.py  lidar_bot_localization.launch.py  localization_launch.py  navigation_launch.py
launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/log/: latest_build
models/WRO_FIELD_2025/: model.config  model.sdf  model_o.sdf
rviz/: lidar_urdf.rviz
src/: fake_lidar.py  fake_odometry.py  get_block.py  get_pose_from_tf.py  image_processor.py  joystick_teleop.py  obstacle_challenge.py  odom_to_base_link_tf.py  send_multiple_goals.py  slam_mode_switcher.py  spawn_dummy_obstacle.py  spawn_dummy_obstacle2.py
urdf/: lidar_bot.urdf  lidar_bot_camera.urdf
worlds/: wro_2025.world  wro_2025_o.world
